swift-sqlparser/src/main/java/com/fr/swift/jdbc/antlr4/SwiftSqlParser.java
// Generated from D:\workspace\swift-public/target/classes/SwiftSqlParser.g4 by ANTLR 4.5.3
package com.fr.swift.jdbc.antlr4;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SwiftSqlParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            SELECT = 1, DISTINCT = 2, AS = 3, FROM = 4, WHERE = 5, GROUP = 6, BY = 7, HAVING = 8,
            ORDER = 9, ASC = 10, DESC = 11, LIMIT = 12, INSERT = 13, INTO = 14, VALUES = 15, DELETE = 16,
            TRUNCATE = 17, CREATE = 18, TABLE = 19, NULL = 20, PARTITION = 21, BIT = 22, TINYINT = 23,
            SMALLINT = 24, INTEGER = 25, BIGINT = 26, FLOAT = 27, REAL = 28, DOUBLE = 29, NUMERIC = 30,
            DECIMAL = 31, CHAR = 32, VARCHAR = 33, LONGVARCHAR = 34, DATE = 35, TIME = 36, TIMESTAMP = 37,
            BOOLEAN = 38, DROP = 39, ALTER = 40, ADD = 41, COLUMN = 42, MAX = 43, MIN = 44, SUM = 45,
            AVG = 46, COUNT = 47, MID = 48, TODATE = 49, NOT = 50, IN = 51, BETWEEN = 52, AND = 53,
            OR = 54, LIKE = 55, IS = 56, LINE = 57, HASH = 58, RANGE = 59, MUL = 60, DIV = 61, MOD = 62,
            PLUS = 63, MINUS = 64, EQ = 65, GREATER = 66, LESS = 67, GEQ = 68, LEQ = 69, NEQ = 70,
            EXCLAMATION = 71, BIT_NOT = 72, BIT_OR = 73, BIT_AND = 74, BIT_XOR = 75, DOT = 76,
            L_PAR = 77, R_PAR = 78, COMMA = 79, SEMI = 80, AT = 81, SINGLE_QUOTE = 82, DOUBLE_QUOTE = 83,
            REVERSE_QUOTE = 84, COLON = 85, IDENTIFIER = 86, NUMERIC_LITERAL = 87, STRING_LITERAL = 88,
            DIGIT = 89, WS = 90;
    public static final int
            RULE_root = 0, RULE_sqls = 1, RULE_sql = 2, RULE_ddl = 3, RULE_dml = 4,
            RULE_createTable = 5, RULE_columnDefinitions = 6, RULE_columnDefinition = 7,
            RULE_dataType = 8, RULE_dropTable = 9, RULE_alterTable = 10, RULE_alterTableAddColumn = 11,
            RULE_alterTableDropColumn = 12, RULE_insert = 13, RULE_delete = 14, RULE_truncate = 15,
            RULE_select = 16, RULE_columns = 17, RULE_orderBy = 18, RULE_expr = 19,
            RULE_simpleExpr = 20, RULE_funcExpr = 21, RULE_funcName = 22, RULE_keywordBoolExpr = 23,
            RULE_boolExpr = 24, RULE_op = 25, RULE_boolOp = 26, RULE_logicOp = 27,
            RULE_name = 28, RULE_names = 29, RULE_value = 30, RULE_values = 31;
    public static final String[] ruleNames = {
            "root", "sqls", "sql", "ddl", "dml", "createTable", "columnDefinitions",
            "columnDefinition", "dataType", "dropTable", "alterTable", "alterTableAddColumn",
            "alterTableDropColumn", "insert", "delete", "truncate", "select", "columns",
            "orderBy", "expr", "simpleExpr", "funcExpr", "funcName", "keywordBoolExpr",
            "boolExpr", "op", "boolOp", "logicOp", "name", "names", "value", "values"
    };

    private static final String[] _LITERAL_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            "'*'", "'/'", "'%'", "'+'", "'-'", "'='", "'>'", "'<'", "'>='", "'<='",
            "'!='", "'!'", "'~'", "'|'", "'&'", "'^'", "'.'", "'('", "')'", "','",
            "';'", "'@'", "'''", "'\"'", "'`'", "':'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, "SELECT", "DISTINCT", "AS", "FROM", "WHERE", "GROUP", "BY", "HAVING",
            "ORDER", "ASC", "DESC", "LIMIT", "INSERT", "INTO", "VALUES", "DELETE",
            "TRUNCATE", "CREATE", "TABLE", "NULL", "PARTITION", "BIT", "TINYINT",
            "SMALLINT", "INTEGER", "BIGINT", "FLOAT", "REAL", "DOUBLE", "NUMERIC",
            "DECIMAL", "CHAR", "VARCHAR", "LONGVARCHAR", "DATE", "TIME", "TIMESTAMP",
            "BOOLEAN", "DROP", "ALTER", "ADD", "COLUMN", "MAX", "MIN", "SUM", "AVG",
            "COUNT", "MID", "TODATE", "NOT", "IN", "BETWEEN", "AND", "OR", "LIKE",
            "IS", "LINE", "HASH", "RANGE", "MUL", "DIV", "MOD", "PLUS", "MINUS", "EQ",
            "GREATER", "LESS", "GEQ", "LEQ", "NEQ", "EXCLAMATION", "BIT_NOT", "BIT_OR",
            "BIT_AND", "BIT_XOR", "DOT", "L_PAR", "R_PAR", "COMMA", "SEMI", "AT",
            "SINGLE_QUOTE", "DOUBLE_QUOTE", "REVERSE_QUOTE", "COLON", "IDENTIFIER",
            "NUMERIC_LITERAL", "STRING_LITERAL", "DIGIT", "WS"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "SwiftSqlParser.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public SwiftSqlParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class RootContext extends ParserRuleContext {
        public SqlsContext sqls() {
            return getRuleContext(SqlsContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(SwiftSqlParser.EOF, 0);
        }

        public RootContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_root;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).enterRoot(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).exitRoot(this);
        }
    }

    public final RootContext root() throws RecognitionException {
        RootContext _localctx = new RootContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_root);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(64);
                sqls();
                setState(65);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SqlsContext extends ParserRuleContext {
        public List<SqlContext> sql() {
            return getRuleContexts(SqlContext.class);
        }

        public SqlContext sql(int i) {
            return getRuleContext(SqlContext.class, i);
        }

        public List<TerminalNode> SEMI() {
            return getTokens(SwiftSqlParser.SEMI);
        }

        public TerminalNode SEMI(int i) {
            return getToken(SwiftSqlParser.SEMI, i);
        }

        public SqlsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_sqls;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).enterSqls(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).exitSqls(this);
        }
    }

    public final SqlsContext sqls() throws RecognitionException {
        SqlsContext _localctx = new SqlsContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_sqls);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(67);
                sql();
                setState(72);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                while (_alt != 1 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1 + 1) {
                        {
                            {
                                setState(68);
                                match(SEMI);
                                setState(69);
                                sql();
                            }
                        }
                    }
                    setState(74);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                }
                setState(76);
                _la = _input.LA(1);
                if (_la == SEMI) {
                    {
                        setState(75);
                        match(SEMI);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SqlContext extends ParserRuleContext {
        public DdlContext ddl() {
            return getRuleContext(DdlContext.class, 0);
        }

        public DmlContext dml() {
            return getRuleContext(DmlContext.class, 0);
        }

        public SqlContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_sql;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).enterSql(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).exitSql(this);
        }
    }

    public final SqlContext sql() throws RecognitionException {
        SqlContext _localctx = new SqlContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_sql);
        try {
            setState(80);
            switch (_input.LA(1)) {
                case CREATE:
                case DROP:
                case ALTER:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(78);
                    ddl();
                }
                break;
                case SELECT:
                case INSERT:
                case DELETE:
                case TRUNCATE:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(79);
                    dml();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DdlContext extends ParserRuleContext {
        public CreateTableContext createTable() {
            return getRuleContext(CreateTableContext.class, 0);
        }

        public DropTableContext dropTable() {
            return getRuleContext(DropTableContext.class, 0);
        }

        public AlterTableContext alterTable() {
            return getRuleContext(AlterTableContext.class, 0);
        }

        public DdlContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_ddl;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).enterDdl(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).exitDdl(this);
        }
    }

    public final DdlContext ddl() throws RecognitionException {
        DdlContext _localctx = new DdlContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_ddl);
        try {
            setState(85);
            switch (_input.LA(1)) {
                case CREATE:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(82);
                    createTable();
                }
                break;
                case DROP:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(83);
                    dropTable();
                }
                break;
                case ALTER:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(84);
                    alterTable();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DmlContext extends ParserRuleContext {
        public InsertContext insert() {
            return getRuleContext(InsertContext.class, 0);
        }

        public DeleteContext delete() {
            return getRuleContext(DeleteContext.class, 0);
        }

        public SelectContext select() {
            return getRuleContext(SelectContext.class, 0);
        }

        public TruncateContext truncate() {
            return getRuleContext(TruncateContext.class, 0);
        }

        public DmlContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dml;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).enterDml(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).exitDml(this);
        }
    }

    public final DmlContext dml() throws RecognitionException {
        DmlContext _localctx = new DmlContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_dml);
        try {
            setState(91);
            switch (_input.LA(1)) {
                case INSERT:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(87);
                    insert();
                }
                break;
                case DELETE:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(88);
                    delete();
                }
                break;
                case SELECT:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(89);
                    select();
                }
                break;
                case TRUNCATE:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(90);
                    truncate();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CreateTableContext extends ParserRuleContext {
        public NameContext table;

        public TerminalNode CREATE() {
            return getToken(SwiftSqlParser.CREATE, 0);
        }

        public TerminalNode TABLE() {
            return getToken(SwiftSqlParser.TABLE, 0);
        }

        public TerminalNode L_PAR() {
            return getToken(SwiftSqlParser.L_PAR, 0);
        }

        public ColumnDefinitionsContext columnDefinitions() {
            return getRuleContext(ColumnDefinitionsContext.class, 0);
        }

        public TerminalNode R_PAR() {
            return getToken(SwiftSqlParser.R_PAR, 0);
        }

        public NameContext name() {
            return getRuleContext(NameContext.class, 0);
        }

        public CreateTableContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_createTable;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).enterCreateTable(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).exitCreateTable(this);
        }
    }

    public final CreateTableContext createTable() throws RecognitionException {
        CreateTableContext _localctx = new CreateTableContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_createTable);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(93);
                match(CREATE);
                setState(94);
                match(TABLE);
                setState(95);
                ((CreateTableContext) _localctx).table = name();
                setState(96);
                match(L_PAR);
                setState(97);
                columnDefinitions();
                setState(98);
                match(R_PAR);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ColumnDefinitionsContext extends ParserRuleContext {
        public List<NameContext> name() {
            return getRuleContexts(NameContext.class);
        }

        public NameContext name(int i) {
            return getRuleContext(NameContext.class, i);
        }

        public List<ColumnDefinitionContext> columnDefinition() {
            return getRuleContexts(ColumnDefinitionContext.class);
        }

        public ColumnDefinitionContext columnDefinition(int i) {
            return getRuleContext(ColumnDefinitionContext.class, i);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(SwiftSqlParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(SwiftSqlParser.COMMA, i);
        }

        public ColumnDefinitionsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_columnDefinitions;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener)
                ((SwiftSqlParserListener) listener).enterColumnDefinitions(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener)
                ((SwiftSqlParserListener) listener).exitColumnDefinitions(this);
        }
    }

    public final ColumnDefinitionsContext columnDefinitions() throws RecognitionException {
        ColumnDefinitionsContext _localctx = new ColumnDefinitionsContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_columnDefinitions);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(100);
                name();
                setState(101);
                columnDefinition();
                setState(108);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(102);
                            match(COMMA);
                            setState(103);
                            name();
                            setState(104);
                            columnDefinition();
                        }
                    }
                    setState(110);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ColumnDefinitionContext extends ParserRuleContext {
        public Token length;

        public DataTypeContext dataType() {
            return getRuleContext(DataTypeContext.class, 0);
        }

        public TerminalNode L_PAR() {
            return getToken(SwiftSqlParser.L_PAR, 0);
        }

        public TerminalNode R_PAR() {
            return getToken(SwiftSqlParser.R_PAR, 0);
        }

        public TerminalNode NUMERIC_LITERAL() {
            return getToken(SwiftSqlParser.NUMERIC_LITERAL, 0);
        }

        public ColumnDefinitionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_columnDefinition;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener)
                ((SwiftSqlParserListener) listener).enterColumnDefinition(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener)
                ((SwiftSqlParserListener) listener).exitColumnDefinition(this);
        }
    }

    public final ColumnDefinitionContext columnDefinition() throws RecognitionException {
        ColumnDefinitionContext _localctx = new ColumnDefinitionContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_columnDefinition);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(111);
                dataType();
                setState(115);
                _la = _input.LA(1);
                if (_la == L_PAR) {
                    {
                        setState(112);
                        match(L_PAR);
                        setState(113);
                        ((ColumnDefinitionContext) _localctx).length = match(NUMERIC_LITERAL);
                        setState(114);
                        match(R_PAR);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DataTypeContext extends ParserRuleContext {
        public TerminalNode BIT() {
            return getToken(SwiftSqlParser.BIT, 0);
        }

        public TerminalNode TINYINT() {
            return getToken(SwiftSqlParser.TINYINT, 0);
        }

        public TerminalNode SMALLINT() {
            return getToken(SwiftSqlParser.SMALLINT, 0);
        }

        public TerminalNode INTEGER() {
            return getToken(SwiftSqlParser.INTEGER, 0);
        }

        public TerminalNode BIGINT() {
            return getToken(SwiftSqlParser.BIGINT, 0);
        }

        public TerminalNode FLOAT() {
            return getToken(SwiftSqlParser.FLOAT, 0);
        }

        public TerminalNode REAL() {
            return getToken(SwiftSqlParser.REAL, 0);
        }

        public TerminalNode DOUBLE() {
            return getToken(SwiftSqlParser.DOUBLE, 0);
        }

        public TerminalNode NUMERIC() {
            return getToken(SwiftSqlParser.NUMERIC, 0);
        }

        public TerminalNode DECIMAL() {
            return getToken(SwiftSqlParser.DECIMAL, 0);
        }

        public TerminalNode CHAR() {
            return getToken(SwiftSqlParser.CHAR, 0);
        }

        public TerminalNode VARCHAR() {
            return getToken(SwiftSqlParser.VARCHAR, 0);
        }

        public TerminalNode LONGVARCHAR() {
            return getToken(SwiftSqlParser.LONGVARCHAR, 0);
        }

        public TerminalNode DATE() {
            return getToken(SwiftSqlParser.DATE, 0);
        }

        public TerminalNode TIME() {
            return getToken(SwiftSqlParser.TIME, 0);
        }

        public TerminalNode TIMESTAMP() {
            return getToken(SwiftSqlParser.TIMESTAMP, 0);
        }

        public TerminalNode BOOLEAN() {
            return getToken(SwiftSqlParser.BOOLEAN, 0);
        }

        public DataTypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dataType;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).enterDataType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).exitDataType(this);
        }
    }

    public final DataTypeContext dataType() throws RecognitionException {
        DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_dataType);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(117);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BIT) | (1L << TINYINT) | (1L << SMALLINT) | (1L << INTEGER) | (1L << BIGINT) | (1L << FLOAT) | (1L << REAL) | (1L << DOUBLE) | (1L << NUMERIC) | (1L << DECIMAL) | (1L << CHAR) | (1L << VARCHAR) | (1L << LONGVARCHAR) | (1L << DATE) | (1L << TIME) | (1L << TIMESTAMP) | (1L << BOOLEAN))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DropTableContext extends ParserRuleContext {
        public NameContext table;

        public TerminalNode DROP() {
            return getToken(SwiftSqlParser.DROP, 0);
        }

        public TerminalNode TABLE() {
            return getToken(SwiftSqlParser.TABLE, 0);
        }

        public NameContext name() {
            return getRuleContext(NameContext.class, 0);
        }

        public DropTableContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dropTable;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).enterDropTable(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).exitDropTable(this);
        }
    }

    public final DropTableContext dropTable() throws RecognitionException {
        DropTableContext _localctx = new DropTableContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_dropTable);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(119);
                match(DROP);
                setState(120);
                match(TABLE);
                setState(121);
                ((DropTableContext) _localctx).table = name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AlterTableContext extends ParserRuleContext {
        public AlterTableAddColumnContext alterTableAddColumn() {
            return getRuleContext(AlterTableAddColumnContext.class, 0);
        }

        public AlterTableDropColumnContext alterTableDropColumn() {
            return getRuleContext(AlterTableDropColumnContext.class, 0);
        }

        public AlterTableContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_alterTable;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).enterAlterTable(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener) ((SwiftSqlParserListener) listener).exitAlterTable(this);
        }
    }

    public final AlterTableContext alterTable() throws RecognitionException {
        AlterTableContext _localctx = new AlterTableContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_alterTable);
        try {
            setState(125);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(123);
                    alterTableAddColumn();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(124);
                    alterTableDropColumn();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AlterTableAddColumnContext extends ParserRuleContext {
        public NameContext table;

        public TerminalNode ALTER() {
            return getToken(SwiftSqlParser.ALTER, 0);
        }

        public TerminalNode TABLE() {
            return getToken(SwiftSqlParser.TABLE, 0);
        }

        public TerminalNode ADD() {
            return getToken(SwiftSqlParser.ADD, 0);
        }

        public ColumnDefinitionsContext columnDefinitions() {
            return getRuleContext(ColumnDefinitionsContext.class, 0);
        }

        public NameContext name() {
            return getRuleContext(NameContext.class, 0);
        }

        public AlterTableAddColumnContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_alterTableAddColumn;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener)
                ((SwiftSqlParserListener) listener).enterAlterTableAddColumn(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SwiftSqlParserListener)
                ((SwiftSqlParserListener) listener).exitAlterTableAddColumn(this);
        }
    }
